# ministatus

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  publish.yml  pyright-lint.yml  ruff-check.yml  ruff-format.yml
src/ministatus/: __init__.py  __main__.py  appdirs.py  logging.py  state.py
src/ministatus/bot/: __init__.py  bot.py  db.py  dt.py  errors.py  views.py
src/ministatus/bot/cogs/: __init__.py  cleanup.py  errors.py  owner.py
src/ministatus/bot/cogs/status/: __init__.py  alert.py  cog.py  db.py  graph.py  permissions.py  query.py  views.py
src/ministatus/bot/cogs/status/views/: __init__.py  alert.py  book.py  display.py  overview.py  query.py  summary.py
src/ministatus/cli/: __main__.py  command.py  config.py  errors.py
src/ministatus/cli/commands/: __init__.py  appdirs.py  asyncio.py  config.py  db.py  debug.py  invite.py  markers.py  start.py  status.py
src/ministatus/db/: __init__.py  client.py  connection.py  converters.py  errors.py  migrations.py  models.py  secret.py  status.py
src/ministatus/db/migrations/: 001-base.sql  002-status.sql  003-num-players.sql  004-status-details.sql  005-downtime.sql
