[build-system]
requires = ["uv-build~=0.9.5"]
build-backend = "uv_build"

[project]
name = "ministatus"
version = "0.1.0.post1"
description = "A Discord bot for managing game server status embeds."
requires-python = ">=3.11"
dependencies = [
    "asqlite~=2.0",
    "click~=8.3",
    "discord.py~=2.6",
    "dnspython~=2.8",
    "ipaddress~=1.0",
    "jishaku~=2.6",
    "matplotlib~=3.10",
    "opengsq~=3.4",
    "platformdirs~=4.5",
    "pydantic~=2.12",
]

[project.scripts]
ministatus = "ministatus.__main__:main"
