[build-system]
requires = ["uv-build~=0.9.5"]
build-backend = "uv_build"

[project]
name = "ministatus"
version = "0.8.1"
description = "A Discord bot for managing game server status embeds."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "thegamecracks" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    # We use these frameworks, but we aren't extensions for them
    # "Framework :: AsyncIO",
    # "Framework :: Matplotlib",
    # "Framework :: Pydantic",
    # "Framework :: Pydantic :: 2",
    # "Framework :: aiohttp",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: SQL",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
    "Typing :: Typed",
]
dependencies = [
    "asqlite~=2.0",
    "click~=8.3",
    "discord.py~=2.6",
    "dnspython~=2.8",
    "ipaddress~=1.0",
    "matplotlib~=3.10",
    "opengsq~=3.4.1",
    "platformdirs~=4.5",
    "pydantic~=2.12",
]

[dependency-groups]
dev = ["jishaku~=2.6"]

[project.scripts]
ministatus = "ministatus.__main__:main"

[project.urls]
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage = "https://github.com/thegamecracks/ministatus"
GitHub = "https://github.com/thegamecracks/ministatus"
Issues = "https://github.com/thegamecracks/ministatus/issues"
